--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <i class=" fas fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>UI/UX Designer</p>
+                <p>Frontend Developer</p>
                 <h1> Hi, I'm <br><span>Swagat Nandan Rout</span> </h1>
             </div>
         </div>
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/user.png" alt="">
+                    <img src="images/bellow 1mb.jpeg" alt="">
                 </div>
                 <div class="about-col-2">
                     <h2 class="sub-title">About Me</h2>
@@ -121,17 +121,17 @@
                 <div class="work">
                     <img src="images/work-1.png" alt="">
                     <div class="layer">
-                        <h3>Social Media App</h3>
-                        <p>The app connects you to the talented people around the world.Download it from play store</p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>Blog App</h3>
+                        <p>The app allows users to view detailed blog posts in single-page</p>
+                        <a href="https://swagatblogs.vercel.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="images/work-2.png" alt="">
                     <div class="layer">
-                        <h3>Social Media App</h3>
-                        <p>The app connects you to the talented people around the world.Download it from play store</p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>Real Estate App</h3>
+                        <p>The app displays property listings and detailed views</p>
+                        <a href="https://real-estate-frontend-henna.vercel.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -143,7 +143,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">See more</a>
+            <a href="https://github.com/SKYNEET1?tab=repositories" class="btn">See more</a>
         </div>
     </div>
 
@@ -157,10 +157,10 @@
                     <p> <i class="fa-solid fa-paper-plane"></i>snrout18@gmail.com</p>
                     <p> <i class="fa-solid fa-phone-volume"></i>+91 8328862453</p>
                     <div class="social">
-                        <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                        <a href=""><i class="fa-brands fa-github"></i></a>
-                        <a href=""><i class="fa-brands fa-square-whatsapp"></i></a>
+                        <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/swagatrout/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/SKYNEET1?tab=repositories"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://web.whatsapp.com/"><i class="fa-brands fa-square-whatsapp"></i></a>
                     </div>
                     <a href="images/Swagat_resume.pdf" download="" class="btn btn2">Download Resume</a>
                 </div>
